--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.2",
+    "@rushstack/eslint-patch": "^1.1.2",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "11.0.0",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.0.0",
+    "eslint-plugin-vue": "^9.0.0",
     "nuxt3": "latest",
     "postcss": "latest",
-    "tailwindcss": "^3.0.23"
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.0.23",
+    "typescript": "*"
   },
   "dependencies": {
     "cssnano": "^5.0.17"
